--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -f Dockerfile.dev -t njbarrett/docker-react
+  - docker build -f Dockerfile.dev -t njbarrett/docker-react .
 
 scripts:
   - docker run njbarrett/docker-react npm run test -- --coverage
