:green_heart: fix travis again

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ services:
 before_install:
   - docker build -f Dockerfile.dev -t njbarrett/docker-react .
 
-scripts:
+script:
   - docker run njbarrett/docker-react npm run test -- --coverage
