--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,16 @@ before_install:
 
 script:
   - docker run njbarrett/docker-react npm run test -- --coverage
+
+deploy:
+  provider: elasticbeanstalk
+  region: "ap-southeast-2"
+  app: "docker-react"
+  env: "DockerTest-env",
+  bucket_name: "elasticbeanstalk-ap-southeast-2-817396315908"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+  access_key_id: $AWS_KEY_ID
+  secret_access_key:
+    secure: "$AWS_SECRET"
