:green_heart: app name fix

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,10 @@ script:
 deploy:
   provider: "elasticbeanstalk"
   region: "ap-southeast-2"
-  app: "docker-react"
+  app: "docker-test"
   env: "DockerTest-env"
   bucket_name: "elasticbeanstalk-ap-southeast-2-817396315908"
-  bucket_path: "docker-react"
+  bucket_path: "docker-test"
   on:
     branch: "master"
   access_key_id: "$AWS_KEY_ID"
